docs: add docs to success method
